--- a/src/ui/toast/style.scss
+++ b/src/ui/toast/style.scss
@@ -121,7 +121,7 @@
 
 .toast_icon {
   flex-shrink: 0;
-  margin-top: 1px;
+  margin-top: 3px;
   display: flex;
 
   &_success { color: token.$color_status_success; }
